# cusy-design-system

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .vale.ini  CHANGELOG.rst  CNAME  Pipfile  README.rst  pyproject.toml
.github/workflows/: docs.yml  pages.yaml
docs/: conf.py  constraints.txt  index.rst  intro.rst  requirements.txt  resources.rst  themes.rst  typography.rst
docs/.vale/cusy/: Polite.yml  ReadingLevel.yml  Redundancy.yml  Repetition.yml  Spelling.yml
docs/_static/: colorTooltips.js  custom.css  styling.js  svg-pattern-generator.js
docs/_static/vega-altair/: vega-lib.js
docs/_templates/: about.html
docs/accessibility/: color.rst  dataviz.rst  developers.rst  events.rst  index.rst  keyboard.rst  overview.rst
docs/accessibility/dataviz/: d3.rst  index.rst  vega.rst
docs/content/: accessibility.rst  index.rst  testing.rst  writing-style.rst
docs/viz/: axes-and-labels.rst  cognitive-load.rst  colors.rst  dashboards.rst  data-storytelling.rst  diagram-anatomy.rst  index.rst  legends.rst  structure.rst
docs/viz/diagram-anatomy/: alternative-palettes.html  aspect-ratios.rst  axes-and-labels.rst  categorical-colors.html  chord-ciede2000.html  ciede2000.csv  colors-implementation.ipynb  (+11 more)
docs/writing/: about.rst  accessibility.rst  api-reference.rst  code-samples.rst  code-text.rst  code.rst  gender.rst  highlights.rst  index.rst  link-text.rst  main.py  placeholder.rst  testing.rst  ui-elements.rst  voice-tone.rst  wordlist.rst  writing-style.rst
styles/cusy/: Alt.yml  GenderBias.yml  Link.yml  Spelling.yml  Title.yml  ignore.txt
(+20 files in other folders)
